[gd_scene load_steps=20 format=3 uid="uid://d1mu4vi3fk6cm"]

[ext_resource type="Script" uid="uid://c7ytex5tcfgb8" path="res://scripts/systems/MainMenu.gd" id="1_iclq3"]
[ext_resource type="Texture2D" uid="uid://cvye13gf7nvhq" path="res://Assets/Misc/Screenshot 2026-02-04 182944.png" id="2_kg8x7"]
[ext_resource type="FontFile" uid="uid://bt7bwpk5kweam" path="res://Assets/ui/fonts/PressStart2P-Regular.ttf" id="2_w265d"]
[ext_resource type="AudioStream" uid="uid://cqw5f6snd21cu" path="res://Assets/sounds/Music/pixel-dreams-259187.mp3" id="3_v3gjy"]
[ext_resource type="Texture2D" uid="uid://7vwvff2ej72m" path="res://Assets/cars/CustomCar(VANWIJDERACING).png" id="4_bkjnr"]
[ext_resource type="Texture2D" uid="uid://s5js4go2psa1" path="res://Assets/cars/RallyCar(11).png" id="5_440sr"]
[ext_resource type="Texture2D" uid="uid://r48who8kn3mn" path="res://Assets/ui/Icons/settings menu logo.png" id="6_kg8x7"]
[ext_resource type="Texture2D" uid="uid://c3st6b1oi7ujx" path="res://Assets/cars/CustomCar(Blue).png" id="7_m8347"]
[ext_resource type="Texture2D" uid="uid://b32bi6b3dvhdh" path="res://Assets/cars/GoKart.png" id="8_2g00v"]
[ext_resource type="Texture2D" uid="uid://cspejlw1eu2aj" path="res://Assets/Misc/Objects/oil.png" id="8_440sr"]
[ext_resource type="Texture2D" uid="uid://bww0jh03vdaqr" path="res://Assets/cars/van.png" id="9_0aa8n"]
[ext_resource type="Texture2D" uid="uid://kaotqbjagnn8" path="res://Assets/Misc/Objects/skidmark_long_2.png" id="10_b8gin"]
[ext_resource type="Texture2D" uid="uid://bqa1fa1iqq8lr" path="res://Assets/Misc/Objects/tree_large.png" id="12_bkjnr"]
[ext_resource type="Texture2D" uid="uid://cnyvcnk00glu1" path="res://Assets/vehicles/cars/car_blue_small_4.png" id="14_m8347"]
[ext_resource type="Texture2D" uid="uid://bclgbfh24yttq" path="res://Assets/Misc/Objects/cone_straight.png" id="15_0aa8n"]
[ext_resource type="Texture2D" uid="uid://cgxofe1lm5op7" path="res://Assets/Misc/Objects/cone_down.png" id="16_b8gin"]
[ext_resource type="Texture2D" uid="uid://dlj4o0f6auijg" path="res://Assets/cars/CustomCar(Red).png" id="17_b8gin"]
[ext_resource type="Texture2D" uid="uid://hrcwbmbxrkwo" path="res://Assets/Misc/Characters/racer_blue.png" id="18_2tmkl"]
[ext_resource type="Texture2D" uid="uid://b06ldxtitnd5r" path="res://Assets/Misc/Characters/racer_yellow.png" id="19_fyxbt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iclq3")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 540.00006)
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_kg8x7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 348.0
offset_right = 1084.0
offset_bottom = 431.0
color = Color(0.6378432, 0.6378432, 0.63784313, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 661.0
offset_top = 241.0
offset_right = 1173.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("2_w265d")
theme_override_font_sizes/font_size = 64
text = "BITRACER"
horizontal_alignment = 1

[node name="EarlyAccessLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 1072.0
offset_right = 56.0
offset_bottom = 1080.0
theme_override_fonts/font = ExtResource("2_w265d")
theme_override_font_sizes/font_size = 8
text = "V 0.0.1"
horizontal_alignment = 1

[node name="EarlyAccessLabel2" type="Label" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 225.0
offset_right = 852.0
offset_bottom = 241.0
theme_override_colors/font_color = Color(0, 0.012617188, 0, 1)
theme_override_fonts/font = ExtResource("2_w265d")
theme_override_font_sizes/font_size = 16
text = "Early access"
horizontal_alignment = 1

[node name="SoloButton" type="Button" parent="."]
layout_mode = 0
offset_left = 765.0
offset_top = 349.0
offset_right = 869.0
offset_bottom = 389.0
text = "Solo"
icon = ExtResource("4_bkjnr")

[node name="MultiplayerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 871.0
offset_top = 349.0
offset_right = 976.0
offset_bottom = 389.0
text = "Multiplayer"

[node name="RallyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 978.0
offset_top = 349.0
offset_right = 1083.0
offset_bottom = 389.0
text = "Rally"
icon = ExtResource("5_440sr")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 765.0
offset_top = 390.0
offset_right = 923.0
offset_bottom = 430.0
text = "Settings"
icon = ExtResource("6_kg8x7")
expand_icon = true

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 925.0
offset_top = 390.0
offset_right = 1083.0
offset_bottom = 430.0
text = "Quit to desktop"

[node name="mainmenusound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v3gjy")
autoplay = true
parameters/looping = true

[node name="Oil" type="Sprite2D" parent="."]
position = Vector2(1012, 871)
rotation = 1.9111356
texture = ExtResource("8_440sr")

[node name="RallyCar(11)" type="Sprite2D" parent="."]
position = Vector2(1783.9999, 304.00003)
rotation = -0.36128315
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_440sr")

[node name="CustomCar(vanwijderacing)" type="Sprite2D" parent="."]
position = Vector2(1195, 608.99994)
rotation = 1.0402162
scale = Vector2(2, 2)
texture = ExtResource("4_bkjnr")

[node name="CustomCar(blue)" type="Sprite2D" parent="."]
position = Vector2(1007, 643)
rotation = -4.569272
scale = Vector2(2, 2)
texture = ExtResource("7_m8347")

[node name="GoKart" type="Sprite2D" parent="."]
position = Vector2(442, 829.00006)
rotation = 1.1431906
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_2g00v")

[node name="GoKart2" type="Sprite2D" parent="."]
position = Vector2(375, 872)
rotation = 0.27052602
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_2g00v")

[node name="Van" type="Sprite2D" parent="."]
position = Vector2(959, 877.00006)
rotation = 0.98611104
scale = Vector2(2.5, 2.5)
texture = ExtResource("9_0aa8n")

[node name="SkidmarkLong2" type="Sprite2D" parent="."]
position = Vector2(1813.27, 383.926)
rotation = -0.31066862
scale = Vector2(3.75, 4.5473714)
texture = ExtResource("10_b8gin")

[node name="TreeLarge" type="Sprite2D" parent="."]
position = Vector2(745, 453)
scale = Vector2(2.5, 2.5)
texture = ExtResource("12_bkjnr")

[node name="CarBlueSmall4" type="Sprite2D" parent="."]
position = Vector2(131.99994, 102)
rotation = -2.003638
scale = Vector2(3.25, 3.25)
texture = ExtResource("14_m8347")

[node name="GoKart3" type="Sprite2D" parent="."]
position = Vector2(156, 93)
rotation = 1.3177236
scale = Vector2(1.2500002, 1.2500002)
texture = ExtResource("8_2g00v")

[node name="ConeStraight" type="Sprite2D" parent="."]
position = Vector2(229, 73)
rotation = -0.7784169
texture = ExtResource("15_0aa8n")

[node name="ConeStraight2" type="Sprite2D" parent="."]
position = Vector2(218, 119)
texture = ExtResource("15_0aa8n")

[node name="ConeDown" type="Sprite2D" parent="."]
position = Vector2(176.99998, 153.99998)
rotation = 1.298525
texture = ExtResource("16_b8gin")

[node name="TitleLabel2" type="Label" parent="."]
layout_mode = 0
offset_left = 1035.0
offset_top = 338.0
offset_right = 1131.0
offset_bottom = 355.0
rotation = 0.43633232
theme_override_fonts/font = ExtResource("2_w265d")
theme_override_font_sizes/font_size = 8
text = "Expirimental"
horizontal_alignment = 1

[node name="CustomCar(red)" type="Sprite2D" parent="."]
position = Vector2(1171, 248.00003)
rotation = -0.88313663
scale = Vector2(2, 2)
texture = ExtResource("17_b8gin")

[node name="RacerBlue" type="Sprite2D" parent="."]
position = Vector2(439.79282, 829.6387)
rotation = 1.1431906
scale = Vector2(0.4, 0.3455452)
texture = ExtResource("18_2tmkl")

[node name="RacerBlue2" type="Sprite2D" parent="."]
position = Vector2(374.25894, 874.20325)
rotation = 0.31415927
scale = Vector2(0.4, 0.34763795)
texture = ExtResource("19_fyxbt")
